XFIGURE-4: Initialize the project
- Internal components moved to org.xwiki.contrib.figure.internal
- revapi check against org.xwiki.rendering:xwiki-rendering-macro-figure:14.9